--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="publications.html">Publications</a></li>
-        <li><a href="teaching.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </header>
